--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="150dp"
-            android:text="Cambia"
+            android:text="Nombre"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
@@ -57,7 +57,7 @@
             android:layout_marginTop="50dp"
             android:text="Resultado"
             android:textColor="#FFFFFF"
-            android:textSize="24sp"
+            android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
@@ -66,7 +66,7 @@
             android:id="@+id/volverButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="103dp"
+            android:layout_marginTop="90dp"
             android:text="Calcular otra vez "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
