--- a/app/src/main/res/layout/activity_configuracion.xml
+++ b/app/src/main/res/layout/activity_configuracion.xml
@@ -25,10 +25,10 @@
         android:id="@+id/color1but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="165dp"
         android:layout_marginTop="153dp"
-        android:layout_marginEnd="158dp"
-        android:text="color1"
+        android:text="Amarillo"
+        android:textColor="#FFA31C"
+        android:textColorHighlight="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -37,10 +37,9 @@
         android:id="@+id/color2but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
         android:layout_marginTop="83dp"
-        android:layout_marginEnd="162dp"
-        android:text="color2"
+        android:text="Naranja"
+        android:textColor="#FF7847"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/color1but" />
@@ -49,10 +48,9 @@
         android:id="@+id/color3but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="118dp"
-        android:layout_marginEnd="162dp"
-        android:text="Color3"
+        android:layout_marginTop="83dp"
+        android:text="Violeta"
+        android:textColor="#5C3847"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/color2but" />
