--- a/app/src/main/res/layout/activity_notas.xml
+++ b/app/src/main/res/layout/activity_notas.xml
@@ -24,11 +24,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
-            android:layout_marginTop="86dp"
+            android:layout_marginTop="52dp"
             android:layout_marginEnd="269dp"
-            android:text="Clculo de notas"
+            android:layout_marginBottom="47dp"
+            android:text="Calculo de notas"
             android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/parcial1EditT"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.285"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,10 +44,15 @@
             android:layout_marginStart="101dp"
             android:layout_marginEnd="104dp"
             android:layout_marginBottom="31dp"
+            android:backgroundTint="#FFFFFF"
+            android:drawableTint="#FFFEFE"
             android:ems="10"
+            android:foregroundTint="#FFFFFF"
             android:hint="Parcial 1"
             android:inputType="textPersonName|numberDecimal"
             android:numeric="decimal"
+            android:scrollbarThumbHorizontal="@android:color/background_light"
+            android:scrollbarThumbVertical="@android:color/background_light"
             android:textAlignment="viewStart"
             android:textColor="#FFFFFF"
             android:textColorHighlight="#FFFFFF"
@@ -58,7 +68,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="101dp"
             android:layout_marginEnd="104dp"
-            android:layout_marginBottom="100dp"
+            android:layout_marginBottom="144dp"
+            android:backgroundTint="#FFFFFF"
             android:ems="10"
             android:hint="Proyecto Parcial 2"
             android:inputType="number|textPersonName|numberDecimal"
@@ -76,6 +87,7 @@
             android:layout_marginStart="101dp"
             android:layout_marginEnd="104dp"
             android:layout_marginBottom="43dp"
+            android:backgroundTint="#FFFFFF"
             android:ems="10"
             android:hint="Ejercicios Semanales"
             android:inputType="number|textPersonName|numberDecimal"
@@ -92,6 +104,7 @@
             android:layout_marginStart="101dp"
             android:layout_marginEnd="104dp"
             android:layout_marginBottom="34dp"
+            android:backgroundTint="#FFFFFF"
             android:ems="10"
             android:hint="Parcial 2"
             android:inputType="textPersonName|numberDecimal"
@@ -110,6 +123,7 @@
             android:layout_marginStart="101dp"
             android:layout_marginEnd="104dp"
             android:layout_marginBottom="40dp"
+            android:backgroundTint="#FFFFFF"
             android:ems="10"
             android:hint="Quices Practicos"
             android:inputType="textShortMessage|textPersonName|numberDecimal"
@@ -127,9 +141,11 @@
             android:layout_marginStart="101dp"
             android:layout_marginEnd="104dp"
             android:layout_marginBottom="43dp"
+            android:backgroundTint="#FFFFFF"
             android:ems="10"
             android:hint="Proyecto Parcial 1"
             android:inputType="textPersonName|numberDecimal"
+            android:textColor="#FFFFFF"
             android:textColorHighlight="#FFFFFF"
             android:textColorHint="#70FFFFFF"
             app:layout_constraintBottom_toTopOf="@+id/proyecto2EditT"
@@ -142,7 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="165dp"
             android:layout_marginEnd="162dp"
-            android:layout_marginBottom="28dp"
+            android:layout_marginBottom="56dp"
             android:text="Calcular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
